# CTestSample

./: README.md
src/: CMakeLists.txt  CTestConfig.cmake  dash board sample.txt
src/Test/: test.cpp
src/console1/: CMakeLists.txt  main.cpp
src/lib1/: lib1.cpp  lib1.h
